--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.8.2",
-    "vue": "^3.3.12",
-    "vue-router": "^4.2.5"
+    "nuxt": "^3.10.3",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "dependencies": {
-    "@nuxt/image": "^1.1.0",
-    "@nuxt/ui": "^2.11.1",
-    "date-fns": "^3.0.6"
-  }
+    "@nuxt/image": "^1.4.0",
+    "@nuxt/ui": "^2.14.2",
+    "date-fns": "^3.5.0"
+  },
+  "packageManager": "yarn@4.1.1"
 }
