--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@nuxt/image": "^1.4.0",
     "@nuxt/ui": "^2.14.2",
+    "@vercel/speed-insights": "^1.0.10",
     "date-fns": "^3.5.0"
   },
   "packageManager": "yarn@4.1.1"
